--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   lottie: ^3.1.2
   get: ^4.6.6
   flutter_screenutil: ^5.9.3
+  pin_code_fields: ^8.0.1
 
 dev_dependencies:
   flutter_test:
