--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   get: ^4.6.6
   flutter_screenutil: ^5.9.3
   pin_code_fields: ^8.0.1
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
