--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   pin_code_fields: ^8.0.1
   image_picker: ^1.1.2
   shared_preferences: ^2.2.3
+  responsive_navigation_bar: ^5.0.2
 
 dev_dependencies:
   flutter_test:
